--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,45 @@ body {
     color: #3498db !important;
 }
 
+.active-link {
+    font-weight: bold;
+    border-bottom: 2px solid #565387;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+
+/* /////////////////////////////////////////////////////////////// */
+
+#header {
+    width: 100%;
+    height: 80vh;
+    margin-top: 70px;
+}
+
+#header h1 {
+    margin: 0px 0px 10px 0px;
+    font-size: 40px;
+    font-weight: 700;
+    color: black;
+}
+
+#header h2 {
+    color: #484848;
+    font-size: 24px;
+}
+
+#header .brand-name {
+    color: #3498db;
+}
+
+#header .btn-get-started {
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 50px;
 }
