--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.active-link {
+/* .active-link {
     font-weight: bold;
     border-bottom: 1px solid #565387;
 }
@@ -40,4 +40,4 @@
     to {
         transform: rotate(360deg);
     }
-}
+} */
