--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;1,200&display=swap");
-body {
+* {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-family: 'Mulish', sans-serif;
+    padding: 0;
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
+    /* -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; */
+    box-sizing: border-box;
+    font-family: 'Muli', sans-serif;
+}
+
+.navbar {
+    background-color: #fff !important;
 }
 
 .navbar-brand {
@@ -12,26 +18,47 @@ body {
     color: #565387 !important;
 }
 
-.ml-auto {
+.navbar a {
     font-size: 1.3rem;
     text-transform: capitalize;
+    text-decoration: none;
+    padding: 0px 5px;
+    color: rgb(122, 119, 119);
 }
 
-.ml-auto :hover {
+.menu-active {
+    font-weight: bold;
+    border-bottom: 1px solid #565387;
+}
+
+
+/* .nav-link {
+    font-weight: bold;
+    border-bottom: 1px solid #565387;
+} */
+
+.navbar a:hover {
     color: #3498db !important;
 }
 
-.active-link {
-    font-weight: bold;
-    border-bottom: 2px solid #565387;
+@media (max-width: 991px) {
+    .navbar-brand {
+        font-size: 1.5rem !important;
+        /* color: #565387 !important; */
+    }
+    .menu-active {
+        font-weight: bold;
+        /* border-bottom: 2px solid #565387; */
+    }
 }
 
-code {
+
+/* code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
+} */
 
 
-/* /////////////////////////////////////////////////////////////// */
+/* ///////////////////////////Home page Decoration//////////////////////////////////// */
 
 #header {
     width: 100%;
@@ -40,19 +67,19 @@ code {
 }
 
 #header h1 {
-    margin: 0px 0px 10px 0px;
-    font-size: 40px;
+    margin: 0 0 10px 0;
+    font-size: 48px;
     font-weight: 700;
     color: black;
+}
+
+#header .brand-name {
+    color: #3498db;
 }
 
 #header h2 {
     color: #484848;
     font-size: 24px;
-}
-
-#header .brand-name {
-    color: #3498db;
 }
 
 #header .btn-get-started {
@@ -62,4 +89,39 @@ code {
     display: inline-block;
     padding: 10px 30px;
     border-radius: 50px;
+    transition: 0.5s;
+    color: #3498db;
+    border: 2px solid #3498db;
+    text-decoration: none;
+}
+
+#header .btn-get-started:hover {
+    background-color: #3498db;
+    color: #fff;
+}
+
+.header-img {
+    text-align: right;
+}
+
+#header .animated {
+    animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@-webkit-keyframes up-down {
+    0% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
+}
+
+@keyframes up-down {
+    0% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
 }
