--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,21 @@
     }
 }
 
+@media (max-width: 768px) {
+    #header {
+        margin-top: 20px;
+    }
+    #header h1 {
+        font-size: 28px;
+    }
+    #header h2 {
+        font-size: 18px;
+    }
+    #header .header-img img {
+        width: 70%;
+    }
+}
+
 
 /* code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
