--- a/src/index.css
+++ b/src/index.css
@@ -78,12 +78,12 @@
 #header {
     width: 100%;
     height: 80vh;
-    margin-top: 70px;
+    margin-top: 30px;
 }
 
 #header h1 {
     margin: 0 0 10px 0;
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 700;
     color: black;
 }
@@ -139,4 +139,10 @@
     100% {
         transform: translateY(-10px);
     }
+}
+
+
+/* /////////////////////////////////////////// */
+.card-img{
+    height: 200px;
 }
